--- a/css/styles.css
+++ b/css/styles.css
@@ -902,7 +902,7 @@ footer #sign-up-btn {
   border-radius: 25px;
   border: 1px solid var(--color-primary);
   box-shadow: inset 0 7px 7px var(--color-primary);
-  color: var(--color-primary);
+  color: var(--color-secondary);
   padding-inline: 15px;
   position: relative;
   text-shadow: 0 0 3px var(--color-secondary);
